--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         id="objeto"
         gltf-model="url(https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/Duck/glTF/Duck.gltf)"
         scale="0.5 0.5 0.5"
-        visible="false"
+        visible="true"
       ></a-entity>
 
       <a-entity camera></a-entity>
